Fix various bugs
Fix various layout issues with mobile viewport
Fix text readability for player and dealer hand score
Fix bugs with button events and being able to be clicked when not allowed

--- a/stylesheets/ui.css
+++ b/stylesheets/ui.css
@@ -51,8 +51,9 @@
 
 /** || Main Styling */
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    max-height: 100%;
     padding: 0 var(--default-padding) var(--default-padding);
     background: linear-gradient(var(--gradient-angle), var(--surface-color-1), var(--surface-color-0));
     display: flex;
@@ -165,6 +166,7 @@ h2 {
     position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5rem;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     color: var(--font-color-0);
 }
 
@@ -224,7 +226,7 @@ dialog {
     height: 70%;
     justify-self: center;
     align-self: center;
-    background-color:  var(--surface-color-0);
+    background-color:  rgb(0,0,0,0);
     border: none;
     border-radius: var(--border-radius);
 }
@@ -251,7 +253,7 @@ dialog > nav > button {
     max-width: var(--button-width-3);
     max-height: var(--button-height-3);
 
-    background-color: var(--surface-opacity-1);
+    background-color: var(--surface-color-0);
     border: none;
     border-radius: var(--button-radius);
 
